# opengl-playgound

./: .clang-tidy  CMakeLists.txt  main.cpp
examples/: cube.cpp  cube.hpp  game_of_life.cpp  game_of_life.hpp  quad.cpp  quad.hpp
examples/game_of_life/: game_of_life.cpp  game_of_life.hpp
examples/quad/: quad.cpp  quad.hpp
examples/scene/: cube.cpp  cube.hpp  materials.hpp  scene.cpp  scene.hpp  shape.hpp  sphere.cpp  sphere.hpp  vertex.cpp  vertex.hpp
examples/scene/GLSL/: fragment.glsl  light_fragment.glsl  light_vertex.glsl  vertex.glsl
examples/scene/shapes/: cuboid.cpp  cuboid.hpp  shape.hpp  sphere.cpp  sphere.hpp  static_shape.cpp  static_shape.hpp
playground/: application.cpp  application.hpp  main.cpp  playgound.hpp  png.cpp  png.hpp  program.cpp  program.hpp  texture.cpp  texture.hpp  types.hpp
